# persistent-sage

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  NOVA-STATUS.md  PERSISTENT-SAGE-STATUS.md  PRIVACY.md  Package.appxmanifest  README.md  SECURITY.md  USER-GUIDE.md  index.html  package-lock.json  package.json  splashscreen.html  vite.config.ts
docs/: ARCHITECTURE.md  BRANCHING.md  BUILD-CI.md  CODING-MODE.md  DATA-AND-PRIVACY.md  DEVELOPMENT.md  INSTALL-WINDOWS.md  INSTALL.md  MICROSOFT-STORE.md  OPENSAGE-PROJECTS.md  PRODUCT-KNOWLEDGE-BASE.md  PUBLISH.md  README.md  REBRAND.md  SAGE-GUIDE.md  SIGNING-AND-UPDATES.md  USER-GUIDE.md
packaging/: BRAND-ASSETS.md
scripts/: generate-nsis-branding.mjs  generate-nsis-branding.py  generate-updater-manifest.mjs  package-portable.mjs  prepare-msix-assets.mjs
src/: App.tsx  (+2 more)
src-tauri/: Cargo.toml  tauri.conf.json  tauri.store.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json  github-updater.json  store-msix.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: nova-invoke-allowlist.toml
src-tauri/src/: agent_tools.rs  artifacts.rs  attachments.rs  browser_fetch.rs  chat.rs  coding.rs  coding_ide.rs  coding_tools.rs  database_query.rs  distribution.rs  embedding.rs  git_auth.rs  lib.rs  main.rs  memory.rs  memory_extract.rs  memory_tools.rs  personality.rs  personality_tools.rs  projects.rs  pulse.rs  recipes.rs  repos.rs  settings.rs  store_updates.rs  tool_stream.rs
src-tauri/src/provider/: anthropic.rs  engine.rs  error.rs  gemini.rs  mod.rs  ollama.rs  openai.rs  placeholder.rs  types.rs
(+71 files in other folders)
