[package]
name = "persistent-sage"
version = "0.2.0-beta.7"
description = "Persistent Sage — local-first AI companion (Tauri shell)"
authors = ["g00siferdev-py"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "nova_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "process", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
futures-util = "0.3"
rusqlite = { version = "0.32", features = ["bundled", "hooks"] }
thiserror = "2"
directories = "5"
opener = "0.8"
uuid = { version = "1", features = ["v4"] }
ring = "0.17"
argon2 = "0.5"
keyring = "3"
base64 = "0.22"
hex = "0.4"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
scraper = "0.22"
which = "7"
